# HyperBEAM

native/dev_wasinn/app/: .gitignore  bun.lockb  package.json
native/dev_wasinn/app/src/: App.vue
native/dev_wasinn/app/src/views/: HomeView.vue
native/dev_wasinn/module/: Cargo.toml
native/dev_wasinn/module/http_server/: Cargo.toml
native/dev_wasinn/module/http_server/src/: http_main.rs  lib.rs  main.rs
native/dev_wasinn/module/inferencer/src/: bindings.rs  lib.rs
native/dev_wasinn/module/inferencer/wit/: ncl-ml.wit
native/dev_wasinn/module/ml_server/: Cargo.toml
native/dev_wasinn/module/ml_server/src/: cli_main.rs  lib.rs
native/dev_wasinn/module/ml_server/src/chatbot/: mod.rs  ncl_ml.rs
native/dev_wasinn/module/nif/: Cargo.toml
native/dev_wasinn/module/nif/src/: lib.rs
native/dev_wasinn/module/server/: Cargo.toml
native/dev_wasinn/module/server/src/: main.rs  ncl_ml.rs  runtime.rs  tensor.rs
