[package]
name = "http_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream-lite = "0.2.0"
axum = { version = "0.8.4", features = ["json"] }
futures = "0.3.31"
ort = { version = "2.0.0-rc.10", features = ["cuda"] }
serde = "1.0.219"
tokenizers = "0.21.1"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
