[package]
name = "ml_server"
edition = "2021"
version = "0.1.0"
authors = ["Saam Tehrani"]

[lib]
name = "ml_server"
path = "src/lib.rs"

[[bin]]
name = "clibot"
path = "src/cli_main.rs"

[dependencies]
wasmtime = {path="../../wasmtime/crates/wasmtime", features = ["component-model", "async"] }
wasmtime-wasi = {path="../../wasmtime/crates/wasi"}
wasmtime-wasi-nn = { path="../../wasmtime/crates/wasi-nn", features = ["onnx"] }
tokio = { version = "1.45.0", features = ["full"] }
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25.6", features = ["jpeg"] }
tokenizers = "0.21.1"
